# varna

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bench-history.csv  benchmarks.md  deny.toml
benches/: benchmarks.rs
docs/adr/: 001-cow-over-string.md  002-flat-module-architecture.md  005-feature-gated-ai-modules.md
docs/architecture/: overview.md
docs/development/: roadmap.md
docs/guides/: usage.md
examples/: basic.rs  grammar.rs  lexicon.rs  scripts.rs
scripts/: bench-history.sh
src/: daimon.rs  dialect.rs  error.rs  hoosh.rs  lib.rs  logging.rs  mcp.rs  registry.rs
src/grammar/: mod.rs
src/lexicon/: mod.rs
src/phoneme/: allophone.rs  inventories.rs  mod.rs  syllable.rs
src/script/: mod.rs  numerals.rs  transliteration.rs
tests/: adversarial.rs  integration.rs  invariants.rs  serde_roundtrip.rs
