[package]
name = "lipi"
version = "0.4.1"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Lipi — multilingual language engine: phoneme inventories, G2P rules, scripts, grammar, and lexicon for 50+ languages"
homepage = "https://github.com/MacCracken/lipi"
repository = "https://github.com/MacCracken/lipi"
readme = "README.md"
documentation = "https://docs.rs/lipi"
keywords = ["language", "phoneme", "linguistics", "multilingual", "ipa"]
categories = ["science", "text-processing"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[features]
default = ["std"]
std = ["serde/std", "thiserror/std"]
full = ["std", "logging"]
logging = ["dep:tracing-subscriber"]

[[bench]]
name = "benchmarks"
harness = false
